# imapmover

./: .gitignore  README.rst  setup.cfg  setup.py
imapmover/: __init__.py  cli.py  mover.py  util.py
