[metadata]
name = imapmover
version = 0.1.0
license=Apache Software License
license_file=LICENSE.txt
description=A tool for moving and synchronising IMAP accounts
long_description=file: README.rst
long_description_content_type=text/x-rst
keywords=imap, console
platforms=any
provides=imapmover
classifiers=
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = imapmover
install_requires =
    imapclient
    tqdm
python_requires=>=3.6

[options.entry_points]
console_scripts =
    imapmover= imapmover.cli:main

[bdist_wheel]
universal=1
